@@ -11,6 +11,7 @@ New features:
 
 Bug fixes:
 	* Fix crash selecting "cell" from function list in function dialog
+	* Properly draw the border line of the symbol in the legend (BUG 470792)
 
 Internal:
 	* use name LabPlot/labplot consistenly (renamed Labplot2/labplot2)
